# xestools

./: .gitignore  ASCII_LOADER_NOTES.md  GUI_ASCII_INTEGRATION_PLAN.md  NEW_LOADER_PLAN.md  PLAN.md  README.md  SESSION2_SUMMARY.md  SESSION3_FINAL_SUMMARY.md  SESSION3_SUMMARY.md  SESSION4_SUMMARY.md  SILX_INTEGRATION_PLAN.md  SILX_SESSION_SUMMARY.md  Singularity  XES_ASCII_FIX_SUMMARY.md  agents.md  buildxestools.sh  main.py  profiles.csv  pyproject.toml  requirements.txt  test_cli_export.py  test_silx_basic.py
docs/: SILX_INTEGRATION_2025-11-16.md
examples/: README.md  batch_analysis.py  export_to_csv.py
i20_xes/: main_gui.py
i20_xes/data/: 279517_1.csv  data.nxs
i20_xes/modules/: cli_export.py  i20_loader.py  init.py  io.py
i20_xes/widgets/: background_dialog.py  init.py  io_panel.py  normalise_dialog.py  plot_widget.py  roi_panel.py  silx_plot_widget.py  xes_panel.py
logs/crash_reports/: crash_report_20251029_204205.json
tests/: test_cli_export.py
xestools/: init.py  main_gui.py
xestools/data/rxes/: 279496_1.nxs  279517_1.nxs
xestools/data/vtc/: 280754_1.nxs  280772_1.nxs  280782_1.nxs  280792_1.nxs
xestools/modules/: base_loader.py  cli_export.py  dataset.py  i20_loader.py  init.py  io.py  io_workflow.py  rxes_workflow.py  scan.py  xes_workflow.py
xestools/widgets/: io_panel.py  profile_toolbar.py  rixs_plot.py  rixs_widget.py  rxes_plot.py  rxes_widget.py  xes_panel.py
xestools/widgets/_legacy/: plot_widget.py  silx_plot_widget.py
